@@ -57,6 +57,7 @@ typedef struct cupsd_job_s
 			*auth_domain,	/* AUTH_DOMAIN environment variable, if any */
 			*auth_password;	/* AUTH_PASSWORD environment variable, if any */
 #ifdef HAVE_GSSAPI
+  krb5_ccache		ccache;		/* Kerberos credential cache */
   char			*ccname;	/* KRB5CCNAME environment variable */
 #endif /* HAVE_GSSAPI */
 } cupsd_job_t;
